Closed
Bug 1182395
Opened 11 years ago
Closed 11 years ago
-P without an argument broken in Firefox 39, Ubuntu 14.04
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
VERIFIED
FIXED
mozilla42
| Tracking | Status | |
|---|---|---|
| firefox39 | --- | wontfix |
| firefox40 | + | verified |
| firefox41 | + | verified |
| firefox42 | + | verified |
| firefox-esr31 | --- | unaffected |
| firefox-esr38 | --- | unaffected |
People
(Reporter: gerbert.jansen, Assigned: glandium)
References
Details
(Keywords: regression, Whiteboard: [testday-20150724])
Attachments
(1 file)
|
1.36 KB,
patch
|
benjamin
:
review+
lmandel
:
approval-mozilla-aurora+
lmandel
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux i686) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/43.0.2357.132 Safari/537.36
Steps to reproduce:
launching firefox profile manager from terminal using
firefox -P
Actual results:
profile manager does not start
Error message:
(process:30334): GLib-CRITICAL **: g_slice_set_config: assertion 'sys_page_size == 0' failed
Error: argument -p requires a profile name
Expected results:
when launching the firefox profile manager without specifying a profile, the profile manager window should open, allowing to choose from previously created profiles
Comment 1•11 years ago
|
||
Steps to reproduce:
1. Extract from .tar.bz2 to a folder
2. Launch terminal and cd the folder
3. ./firefox -P
Actual Results:
Error: argument -p requires a profile name
Expected Results:
Profile Manager should start
Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=5ddbdbc00f3c&tochange=f1902c4276e1
Regressed by:
f1902c4276e1 Mike Hommey — Bug 486172 - Don't ignore a -p command line argument when using the Xremote protocol. r=bsmedberg
Blocks: 486172
Status: UNCONFIRMED → NEW
status-firefox39:
--- → affected
status-firefox40:
--- → affected
status-firefox41:
--- → affected
status-firefox42:
--- → affected
status-firefox-esr31:
--- → unaffected
status-firefox-esr38:
--- → unaffected
tracking-firefox40:
--- → ?
tracking-firefox41:
--- → ?
tracking-firefox42:
--- → ?
Component: Untriaged → Startup and Profile System
Ever confirmed: true
Flags: needinfo?(mh+mozilla)
Keywords: regression
OS: Unspecified → Linux
Product: Firefox → Toolkit
Comment 2•11 years ago
|
||
Tracking because regression.
Updated•11 years ago
|
Summary: Profile Manager broken in Firefox 39, Ubuntu 14.04 → -P without an argument broken in Firefox 39, Ubuntu 14.04
Comment 3•11 years ago
|
||
Presumably -profilemanager still works, right?
Comment 4•11 years ago
|
||
(In reply to Benjamin Smedberg [:bsmedberg] from comment #3)
> Presumably -profilemanager still works, right?
Indeed, it works properly.
| Assignee | ||
Updated•11 years ago
|
Flags: needinfo?(mh+mozilla)
| Assignee | ||
Comment 5•11 years ago
|
||
Assignee: nobody → mh+mozilla
Attachment #8633833 -
Flags: review?(benjamin)
Updated•11 years ago
|
Attachment #8633833 -
Flags: review?(benjamin) → review+
Comment 7•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Comment 8•11 years ago
|
||
This looks like a pretty simple change. 40 and 41 are marked as affected. What do you think about uplifting to Beta and Aurora?
Flags: needinfo?(mh+mozilla)
| Assignee | ||
Comment 9•11 years ago
|
||
Comment on attachment 8633833 [details] [diff] [review]
Don't error out when -p is not given an argument in RemoteCommandLine
Approval Request Comment
[Feature/regressing bug #]: Regression from bug 486172.
[User impact if declined]: firefox -P doesn't work anymore to display the profile manager
[Describe test coverage new/current, TreeHerder]: There is no automated test for this. Without the patch, firefox -P prints out "Error: argument -p requires a profile name". With the patch, firefox -P opens the profile manager, like it used to up to and including Firefox 38.
[Risks and why]: Low. The patch replaces the output of an error message with a fall-through to the old behavior.
[String/UUID change made/needed]: None
Flags: needinfo?(mh+mozilla)
Attachment #8633833 -
Flags: approval-mozilla-beta?
Attachment #8633833 -
Flags: approval-mozilla-aurora?
Updated•11 years ago
|
Comment 10•11 years ago
|
||
Comment on attachment 8633833 [details] [diff] [review]
Don't error out when -p is not given an argument in RemoteCommandLine
Beta+ Aurora+
Attachment #8633833 -
Flags: approval-mozilla-beta?
Attachment #8633833 -
Flags: approval-mozilla-beta+
Attachment #8633833 -
Flags: approval-mozilla-aurora?
Attachment #8633833 -
Flags: approval-mozilla-aurora+
Comment 11•11 years ago
|
||
Comment 12•11 years ago
|
||
Comment 13•11 years ago
|
||
Reproduced the original issue using steps from comment 1, on Ubuntu 12.04 x86, using Firefox 40 Beta 6. The issue no longer reproduces in the latest Firefox 42 Nightly. "./firefox-bin -p" now correctly launches the Profile Manager. Using additional parameters like the profile name or -no-remote also seems to still work fine.
Marking verified for Nightly 42, and setting [good first verify] in case our contributors want to verify on Beta 40 or Aurora 41.
QA Whiteboard: [good first verify]
Comment 14•11 years ago
|
||
Reproduced the bug in Nightly 42.0a1 (2015-07-09) on Linux (Ubuntu 14.04) x64 with the comment 1's instruction!
This Bug is now verified as fixed on Latest Firefox Beta 40.0b7 (BUild ID: 20150723165742) and
Latest Aurora 41.0a2 (2015-07-25) (Build ID: 20150725004004)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:40.0) Gecko/20100101 Firefox/40.0
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:41.0) Gecko/20100101 Firefox/41.0
QA Whiteboard: [good first verify] → [good first verify][testday-20150724]
Whiteboard: [testday-20150724]
Comment 16•11 years ago
|
||
As per comment 14, changing the status as verified..
Status: RESOLVED → VERIFIED
Updated•11 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•