Bug 1182395 - Don't error out when -p is not given an argument in RemoteCommandLine. r=bsmedberg, a=lmandel

Leave it to the normal command line handling to handle the situation and display
the profile manager.